--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   
   <div class="genesis">
-    
+    rerer
     
     <!-- clock widget start -->
 <script type="text/javascript"> var css_file=document.createElement("link"); css_file.setAttribute("rel","stylesheet"); css_file.setAttribute("type","text/css"); css_file.setAttribute("href","//s.bookcdn.com//css/cl/bw-cl-sm1.css?v=0.0.1"); document.getElementsByTagName("head")[0].appendChild(css_file); </script> <div id="tw_24_1427431688"><div style="width:200px; height:px; margin: 0 auto;"><a href="https://booked.net/time/kiev-18881">Kiev</a><br/></div></div> <script type="text/javascript"> function setWidgetData_1427431688(data){ if(typeof(data) != 'undefined' && data.results.length > 0) { for(var i = 0; i < data.results.length; ++i) { var objMainBlock = ''; var params = data.results[i]; objMainBlock = document.getElementById('tw_'+params.widget_type+'_'+params.widget_id); if(objMainBlock !== null) objMainBlock.innerHTML = params.html_code; } } } var clock_timer_1427431688 = -1; widgetSrc = "https://widgets.booked.net/time/info?ver=2;domid=209;type=24;id=1427431688;scode=2;city_id=18881;wlangid=1;mode=1;details=0;background=fa35fa;border_color=ffffff;color=000000;add_background=ffffff;add_color=333333;head_color=ffffff;border=1;transparent=0"; var widgetUrl = location.href; widgetSrc += '&ref=' + widgetUrl; var wstrackId = "20287640"; if (wstrackId) { widgetSrc += ';wstrackId=' + wstrackId + ';' } var timeBookedScript = document.createElement("script"); timeBookedScript.setAttribute("type", "text/javascript"); timeBookedScript.src = widgetSrc; document.body.appendChild(timeBookedScript); </script>
