--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body> 
 	
   <div class="genesis">
-    <div class="booked-sglider-contain">
+    <div id="booked-sglider-contain"  class="booked-sglider-contain">
 <div class="booked-sglider">
 <div class="bsg__item">
 <img class="bsg__img" alt="Test" src="https://p.bookcdn.com/data/Photos/330x240/5566/556652/556652844.JPEG"><div class="bsg__logo">
