--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	 11111111 
 	  123123123
-	  
+	  <div id="booked_seo_slider"></div>
 <script type="script">
 fetch('https://booked.ishchuk/?page=seo_banner&banner_id=1')
 .then(function(response) {
