--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 <script type="text/javascript">
-	fetch('https://booked.ishchuk/?page=seo_banner&banner_id=1')
+	fetch('https://www.booked.net/?page=seo_banner&banner_id=1')
 			.then(function(response) {
 				return response.text()
 			})
@@ -35,7 +35,7 @@
 			});
 
 	function run() {
-		var widgetSrc = "https://booked.ishchuk/js/seo_banner.js";
+		var widgetSrc = "https://www.booked.net/js/seo_banner.js";
 		widgetSrc += '?ref=' + widgetUrl;
 		var widgetSrcScript = document.createElement("script");
 		widgetSrcScript.setAttribute("type", "text/javascript");
