--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	 
 
-<div id="booked_seo_slider_1024402341"></div><script type="text/javascript">fetch('https://booked.net/?page=seo_banner&banner_id=2').then(function(response) { return response.text()}).then(function(html) {var parser = new DOMParser();var doc = parser.parseFromString(html, "text/html");document.getElementById('booked_seo_slider').innerHTML = doc.body.innerHTML;}).catch(function(err) {console.log('Failed to fetch page: ', err);});</script>
+<div id="booked_seo_slider_1024402341"></div><script type="text/javascript">fetch('https://www.booked.net/?page=seo_banner&banner_id=2').then(function(response) { return response.text()}).then(function(html) {var parser = new DOMParser();var doc = parser.parseFromString(html, "text/html");document.getElementById('booked_seo_slider').innerHTML = doc.body.innerHTML;}).catch(function(err) {console.log('Failed to fetch page: ', err);});</script>
 	  
 	  555555
 	
