--- a/index.html
+++ b/index.html
@@ -27,35 +27,9 @@
 	
 111111111222 
 
-	  <div id="booked_seo_slider"></div>
-<script type="text/javascript">
-fetch('https://booked.ishchuk/?page=seo_banner&banner_id=1')
-.then(function(response) {
-return response.text()
-})
-.then(function(html) {
-var parser = new DOMParser();
-var doc = parser.parseFromString(html, "text/html");
-document.getElementById('booked_seo_slider').innerHTML = doc.body.innerHTML;
-run();
-})
-.catch(function(err) {
-console.log('Failed to fetch page: ', err);
-});
-
-function run() {
-		var widgetSrc = "https://booked.ishchuk/js/seo_banner.js";
-			widgetSrc += '?ref=' + widgetUrl;
-			var widgetSrcScript = document.createElement("script");
-			widgetSrcScript.setAttribute("type", "text/javascript");
-			widgetSrcScript.src = widgetSrc;
-			document.body.appendChild(widgetSrcScript)
-}
-
-</script>
+<div id="booked_seo_slider_1811207598"></div><script type="text/javascript">fetch('https://www.booked.net/?page=seo_banner&_need_refresh=1&banner_id=5').then(function(response) { return response.text()}).then(function(html) {var parser = new DOMParser();var doc = parser.parseFromString(html, "text/html");document.getElementById('booked_seo_slider_1811207598').innerHTML = doc.body.innerHTML;}).catch(function(err) {console.log('Failed to fetch page: ', err);});</script>
 	  
-	  
-	  
+111111111222   
 <!-- clock widget start -->
 <script type="text/javascript"> var css_file=document.createElement("link"); css_file.setAttribute("rel","stylesheet"); css_file.setAttribute("type","text/css"); css_file.setAttribute("href","https://booked.ishchuk/css/cl/bw-cl-sm1.css?v=0.0.1"); document.getElementsByTagName("head")[0].appendChild(css_file); </script> <div id="tw_24_1577702"><div style="width:200px; height:px; margin: 0 auto;"><a href="https://hotelmix.com.ua/time/kiev-18881">Київ</a><br/></div></div> <script type="text/javascript"> function setWidgetData_1577702(data){ if(typeof(data) != 'undefined' && data.results.length > 0) { for(var i = 0; i < data.results.length; ++i) { var objMainBlock = ''; var params = data.results[i]; objMainBlock = document.getElementById('tw_'+params.widget_type+'_'+params.widget_id); if(objMainBlock !== null) objMainBlock.innerHTML = params.html_code; } } } var clock_timer_1577702 = -1; widgetSrc = "https://widgets.booked.ishchuk/time/info?ver=2;domid=;type=24;id=1577702;scode=2;city_id=18881;wlangid=29;mode=1;details=0;background=f3f3f3;border_color=ffffff;color=000000;add_background=ffffff;add_color=333333;head_color=ffffff;border=1;transparent=0"; var widgetUrl = location.href; widgetSrc += '&ref=' + widgetUrl; var wstrackId = "14347620"; if (wstrackId) { widgetSrc += ';wstrackId=' + wstrackId + ';' } var timeBookedScript = document.createElement("script"); timeBookedScript.setAttribute("type", "text/javascript"); timeBookedScript.src = widgetSrc; document.body.appendChild(timeBookedScript); </script>
 <!-- clock widget end -->
